# gui-qml

./: .cirrus.yml  .gitignore  .gitmodules  CMakeLists.txt  Crypto currency exchange networking bitcoin business  README.md  configure.ac  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md
src/qml/: CMakeLists.txt  README.md  androidcustomdatadir.cpp  androidcustomdatadir.h  androidnotifier.cpp  androidnotifier.h  appmode.h  bitcoin.cpp  bitcoin.h  bitcoin_qml.qrc  bitcoinamount.cpp  bitcoinamount.h  chainmodel.cpp  chainmodel.h  clipboard.h  engine.cpp  engine.h  imageprovider.cpp  imageprovider.h  main.cpp  networktraffictower.cpp  networktraffictower.h  nodemodel.cpp  nodemodel.h  options_model.cpp  options_model.h  peerlistsortproxy.cpp  peerlistsortproxy.h  qrimageprovider.cpp  qrimageprovider.h  qtquickcontrols2.conf  thememanager.cpp  thememanager.h  util.cpp  walletcontroller.cpp  walletqmlcontroller.cpp  walletqmlcontroller.h
src/qml/BitcoinApp/: CMakeLists.txt  NodeRunner.qml  NodeSettings.qml  OnboardingBlockclock.qml  OnboardingConnection.qml  OnboardingCover.qml  OnboardingStorageAmount.qml  OnboardingStorageLocation.qml  SettingsAbout.qml  SettingsConnection.qml  SettingsDeveloper.qml  SettingsStorage.qml  bitcoin.cpp  bitcoin.h  chainmodel.cpp  chainmodel.h  imageprovider.cpp  initerrormessage.qml  main.qml  nodemodel.cpp  nodemodel.h  onboarding01.qml  onboarding01a.qml  onboarding01b.qml  onboarding01c.qml  onboarding02.qml  onboarding03.qml  onboarding04.qml  onboarding05.qml  onboarding05a.qml  onboarding05b.qml  onboarding06.qml  onboarding06a.qml  onboarding06b.qml  options_model.cpp  options_model.h  stub.qml  util.cpp  util.h
src/qml/BitcoinApp/Components/: AboutOptions.qml  BlockClock.qml  BlockCounter.qml  CMakeLists.txt  ConnectionOptions.qml  ConnectionSettings.qml  DeveloperOptions.qml  StorageLocations.qml  StorageOptions.qml  StorageSettings.qml  blockclockdial.cpp  blockclockdial.h
src/qml/BitcoinApp/Controls/: CMakeLists.txt  ContinueButton.qml  ExternalLink.qml  Header.qml  Information.qml  InformationPage.qml  NavButton.qml  NavigationBar.qml  OnboardingInfo.qml  OnboardingNav.qml  OptionButton.qml  OptionSwitch.qml  OutlineButton.qml  PageIndicator.qml  ProgressIndicator.qml  Setting.qml  TextButton.qml  Theme.qml  ValueInput.qml  Wizard.qml
src/qml/components/: AboutOptions.qml  BitcoinAmountInputField.qml  BlockClock.qml  BlockClockComponent.qml  BlockCounter.qml  BlockStatus.qml  BlockStatusDisplayMode.qml  BlocksListView.qml  CaretRightButton.qml  ConnectionOptions.qml  ConnectionSettings.qml  DeveloperOptions.qml  FeeSelection.qml  NetworkIndicator.qml  NetworkTrafficGraph.qml  OptionPopup.qml  PeersIndicator.qml  ProxySettings.qml  Separator.qml  SnapshotGenSettings.qml  SnapshotSettings.qml  StorageLocations.qml  StorageOptions.qml  StorageSettings.qml  ThemeSettings.qml  Tooltip.qml  TotalBytesIndicator.qml  blockclockdial.cpp  blockclockdial.h  blockstatusdial.cpp  blockstatusdial.h
src/qml/controls/: AddWalletButton.qml  ApplicationWindow.qml  BlockClock.qml  Button.qml  CaretRightIcon.qml  ContinueButton.qml  CoreText.qml  CoreTextField.qml  EllipsisMenuButton.qml  EllipsisMenuToggleItem.qml  ExternalLink.qml  FocusBorder.qml  GreenCheckIcon.qml  Header.qml  IPAddressValueInput.qml  Icon.qml  IconButton.qml  Indicator.qml  Information.qml  InformationPage.qml  KeyValueRow.qml  LabeledCoinControlButton.qml  LabeledTextInput.qml  NavButton.qml  NavigationBar.qml  NavigationBar2.qml  NavigationBlockClockTab.qml  NavigationTab.qml  OnboardingInfo.qml  OnboardingNav.qml  OptionButton.qml  OptionSwitch.qml  OutlineButton.qml  PageIndicator.qml  PageStack.qml  ProgressIndicator.qml  QRImage.qml  SendOptionsPopup.qml  Setting.qml  Skeleton.qml  (+9 more)
src/qml/doc/: icon-policy.md  translator-comments.md
src/qml/models/: activitylistmodel.cpp  activitylistmodel.h  chainmodel.cpp  chainmodel.h  coinslistmodel.cpp  coinslistmodel.h  networktraffictower.cpp  networktraffictower.h  nodemodel.cpp  nodemodel.h  onboardingmodel.cpp  onboardingmodel.h  options_model.cpp  options_model.h  paymentrequest.cpp  paymentrequest.h  peerdetailsmodel.cpp  peerdetailsmodel.h  peerlistsortproxy.cpp  peerlistsortproxy.h  sendrecipient.cpp  sendrecipient.h  sendrecipientslistmodel.cpp  sendrecipientslistmodel.h  snapshotqml.cpp  snapshotqml.h  transaction.cpp  transaction.h  walletlistmodel.cpp  walletlistmodel.h  walletqmlmodel.cpp  walletqmlmodel.h  walletqmlmodeltransaction.cpp  walletqmlmodeltransaction.h
src/qml/pages/: initerrormessage.qml  main.qml  stub.qml
src/qml/pages/node/: NetworkTraffic.qml  NodeRunner.qml  NodeSettings.qml  PeerDetails.qml  Peers.qml  Shutdown.qml
src/qml/pages/onboarding/: Onboarding00Welcome.qml  OnboardingBlockStatus.qml  OnboardingBlockclock.qml  OnboardingConnection.qml  OnboardingCover.qml  OnboardingStorageAmount.qml  OnboardingStorageLocation.qml  OnboardingStrengthen.qml  OnboardingWizard.qml  onboarding01.qml  onboarding01a.qml  onboarding01b.qml  onboarding01c.qml  onboarding02.qml  onboarding03.qml  onboarding03a.qml  onboarding03b.qml  onboarding04.qml  onboarding05.qml  onboarding05a.qml  onboarding05b.qml  onboarding06.qml  onboarding06a.qml  onboarding06b.qml
src/qml/pages/settings/: SettingsAbout.qml  SettingsBlockClockDisplayMode.qml  SettingsBlockStatusDisplayMode.qml  SettingsConnection.qml  SettingsDeveloper.qml  SettingsDisplay.qml  SettingsProxy.qml  SettingsSnapshot.qml  SettingsSnapshotGen.qml  SettingsStorage.qml  SettingsTheme.qml
src/qml/pages/wallet/: Activity.qml  ActivityDetails.qml  AddWallet.qml  CoinSelection.qml  CreateBackup.qml  CreateConfirm.qml  CreateIntro.qml  CreateName.qml  CreatePassword.qml  CreateWalletWizard.qml  DesktopWallets.qml  MultipleSendReview.qml  RequestConfirmation.qml  RequestPayment.qml  Send.qml  WalletBadge.qml  WalletSelect.qml
src/qml/test/: imageprovider.cpp  imageprovider.h  onboardingtests.cpp  onboardingtests.h  setup.cpp  setup.h  testimageprovider.cpp  testimageprovider.h  tst_onboarding.qml
src/qml/test/org/bitcoincore/qt/: AppMode.qml  qmldir
(+195 files in other folders)
